--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# anything inside the game-src folder
+# we don't wanna leak game dlls or other files
+/game-src/*
