--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# anything inside the game-src folder
-# we don't wanna leak game dlls or other files
-/game-src/*
+package-lock.json
